# app/Models/Client.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+
+class Client extends Model
+{
+    use HasFactory;
+    protected $table = 'Clientes';
+
+    public function invoices(){
+        return $this->hasMany(Invoice::class,'Cliente', 'Cliente')->orderBy('FECHA', 'desc')->take(3);
+    }
+}
